<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="4"
    tools:context="vos.personal.triplog.LogActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/lblSystemDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="0"
        android:text="" />
    
    <EditText
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_row="0"
        android:hint="@string/app_label_TripDate"
        android:inputType="datetime" />

    <EditText
        android:id="@+id/txtStartReading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_row="1"
        android:inputType="number"
        android:hint="@string/app_label_TripStartReading" />

    <EditText
        android:id="@+id/txtEndReading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_row="1"
        android:inputType="number"
        android:hint="@string/app_label_TripEndReading" />

    <Button
        android:id="@+id/cmdStartTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/app_button_StartTrip">
    </Button>

    <Button
        android:id="@+id/cmdEndTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:text="@string/app_button_EndTrip" 
        android:onClick="endTrip">
    </Button>

</GridLayout>